testsuite/tests/grammar/invalid_predicate/too-specific.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(
        | Name(@identifier)
        | Example("example")
    ) |> when(Example.pred)
}

class FooNode implements Node[FooNode] {
}

class Name: FooNode implements TokenNode {
}

class Example: FooNode implements TokenNode {
    fun pred(): Bool = true
}
